# ai-write

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  justfile
docs/: AI-Write.dc.html  ai-write-kernel.html  api-contract.md  coordinator-design.md  deepseek-api-research.md  design.md  impl-v0.md  impl-v1-results.md  impl-v1.md  impl-v2-dsl.md  impl-v2-orchestration.md  impl-v2-provenance.md  impl-v2-results.md  impl-v2.md  impl-v3-results.md  impl-v3.md  kernel-gap-analysis.md  kernel-impl-results.md  multi-skill-design.md  product-discussion.md  req-module-design.md  session-design.md  sidecar-resources.md  ui-ux-design-draft.md  webui-rebuild-results.md  webui-refactor-assessment.md
skills/: functional-writing.md
src/: lib.rs
src/content/: mod.rs
src/coordinator/: mod.rs
src/dsl/: mod.rs
src/engine/: mod.rs  orchestration.rs
src/observe/: mod.rs
src/provenance/: mod.rs  tests.rs
src/req/: blocking.rs  client_async.rs  error.rs  mod.rs  model.rs  protocol.rs
src/req/types/: common.rs  mod.rs  request.rs  response.rs
src/search/: mod.rs
src/session/: mod.rs
src/skill/: mod.rs
src/tool/: mod.rs  tools.rs  workspace.rs
src/vcs/: mod.rs
src/webui/: index.html  mod.rs
tests/: integration.rs
web/: package.json  server.ts  svelte.config.js  vite.config.ts
web/src/: app.css  app.html  hooks.server.ts
web/src/lib/: article.ts  author.ts  topic.ts  txn.ts  utils.ts
web/src/lib/api/: client.ts  types.ts
web/src/lib/stores/: connection.svelte.ts  layout.svelte.ts  toast.ts  (+2 more)
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+9 files in other folders)
