[package]
name = "ai-write"
version = "1.0.0"
edition = "2024"

[dependencies]
async-stream = { version = "0.3.6", optional = true }
axum = { version = "0.8.9", optional = true }
futures-core = { version = "0.3.32", optional = true }
futures-util = { version = "0.3.32", default-features = false, optional = true, features = ["std"] }
git2 = { version = "0.21.0", optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net", "time"], optional = true }
tokio-stream = { version = "0.1.18", features = ["sync"], optional = true }
ureq = { version = "3.3.0", optional = true }

[features]
default = ["blocking"]
blocking = ["dep:ureq", "dep:git2"]
async = ["dep:reqwest", "dep:futures-core", "dep:async-stream", "dep:futures-util"]
webui = ["blocking", "dep:axum", "dep:tokio", "dep:tokio-stream"]

[dev-dependencies]
futures-util = "0.3.32"
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "macros"] }
